@@ -14,6 +14,7 @@
 - https://github.com/codecentric/chaos-monkey-spring-boot/issues/162[#162] Change default configuration to everything off and predictable values
 - https://github.com/codecentric/chaos-monkey-spring-boot/pull/175[#175] Because https://github.com/codecentric/chaos-monkey-spring-boot/pull/160[#160] failed horribly regarding ease of development, introduce spotless instead
 - https://github.com/codecentric/chaos-monkey-spring-boot/pull/177[#177] Harmonize test naming.
+- https://github.com/codecentric/chaos-monkey-spring-boot/pull/194[#194] Introduce dev containers (for https://github.com/features/codespaces[Github Codespaces] and https://code.visualstudio.com/docs/remote/containers[VS Code])
 
 === New Features
 // - https://github.com/codecentric/chaos-monkey-spring-boot/pull/xxx[#xxx] Added example entry. Please don't remove.
